<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LinksActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/LinksActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:gravity="center_horizontal"
        app:title="Useful Links"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:titleCentered="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l1"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l2"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l3"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l4"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l5"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l6"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l7"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l8"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l9"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
                    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:paddingLeft="10dp"
                    android:text="&#8227;"/>
                <TextView
                    android:id="@+id/l10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l10"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_margin="10dp"
                    android:textColor="#BA0064A8"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>